--- a/research.html
+++ b/research.html
@@ -197,6 +197,9 @@ shadow { position: relative;
 		&#160 (<a href="https://doi.org/10.1086/726457" target="_blank">Journal version</a>)<br>
 	&#160 (<a href="fflsandgundeath.pdf" target="_blank"
 	onClick="javascript: _gaq.push(['_trackPageview', '/downloads/guns']);">Working paper version </a>last updated April 2023)<br><br>
+	
+	   Sickels, Angela D MD; McElroy, Katherine MD; Robinson, Joshua PhD; Chen, Herbert MD, FACS; Rose, J Bart MD, FACS. "Diminishing Returns: An Analysis of Surgeon Compensation in the Setting of Ever-Increasing Student Debt." &#160 <i>Journal of the American College of Surgeons.</i> 241(2): 262-266 <br>
+	   &#160 (<a href="https://doi.org/10.1097/XCS.0000000000001257" target="_blank">Journal version</a>)<br>
 		
 		Erik Nesson, and Joshua J. Robinson. "On the Measurement of Health and Its Effect on the Measurement of Health Inequality." &#160 <i>Economics and Human Biology.</i> 2019. 35:207-221.<br>
 	&#160 (<a href="https://doi.org/10.1016/j.ehb.2019.07.003" target="_blank">Journal version</a>)<br>
